--- a/views/home.jade
+++ b/views/home.jade
@@ -6,7 +6,7 @@ block content
 			div.col-md-4
 				#user
 					h2.text-center.login-title 
-						b welcome back to reaDig #{user.local.firstName}! 
+						b welcome back to reaDigs #{user.local.firstName}! 
 						p.lead here are some of today's most read books!
 		div.row
 			div.col-md-4
