--- a/views/local-connect.jade
+++ b/views/local-connect.jade
@@ -5,7 +5,7 @@ block content
     div.row
       div.col-sm-6.col-md-4.col-md-offset-4
         h1.text-center.login-title 
-          p add a local reaDig account!
+          p add a local reaDigs account!
           br
           div.local-connect
             form(class='form-signin', action='/auth/connect/local', method='POST')
