--- a/views/login.jade
+++ b/views/login.jade
@@ -5,7 +5,7 @@ block content
 		div.row
 			div.col-sm-6.col-md-4.col-md-offset-4
 				h1.text-center.login-title
-					b sign in to reaDig!
+					b sign in to reaDigs!
 					p.lead THE platform for connecting young readers.
 					div.account-wall
 						img(class='login-img', src='http://srec.azores.gov.pt/dre/sd/115189010600/images/readingbook.GIF')
