--- a/views/signup.jade
+++ b/views/signup.jade
@@ -5,7 +5,7 @@ block content
     div.row
       div.col-sm-6.col-md-4.col-md-offset-4
         h1.text-center.login-title 
-          b new to reaDig?
+          b new to reaDigs?
           p.lead sign up here for free to join a wonderful community of young readers.
           br
           div.signup-wall
