--- a/views/index.jade
+++ b/views/index.jade
@@ -5,11 +5,11 @@ block content
 		div.row
 			div.col-sm-6.col-md-4.col-md-offset-4
 				h1.text-center
-					b welcome to reaDig!
+					b welcome to reaDigs!
 					p.lead THE platform for connecting young readers.
 		div.row
 			div.col-sm-6.col-md-4.col-md-offset-4
-				h3.text-muted.text-center LOGIN or SIGN UP for a local reaDig account:
+				h3.text-muted.text-center LOGIN or SIGN UP for a local reaDigs account:
 					br
 					br
 					a(href='/auth/login', class='btn btn-lg btn-social btn-default', style='padding:15px') Login
