--- a/views/friends.jade
+++ b/views/friends.jade
@@ -99,7 +99,7 @@ block content
                   .col-xs-6.col-sm-4
                     form(class='accept-friend', style='text-center', action='/friends', method='POST')
                       .form-group
-                        input#pendingFriend(type='hidden', name='pendingFriend', value='#{pendingFriend.friend}')
+                        input#pendingFriend(type='hidden', name='pendingFriendId', value='#{pendingFriend.friend._id}')
                         button#acceptFriend(class='btn btn-md btn-primary btn-block', type='submit') accept request  
                   .clearfix
 
