--- a/views/profile.jade
+++ b/views/profile.jade
@@ -47,9 +47,10 @@ block content
                 h4 #{user.reviews.length}
               |                 
               .col-md-4.user-pad.text-center
-                h3 friends
+                h3
+                a(href='/friends', style='color:black') friends
                 |                     
-                h4 10
+                h4 #{user.numFriends}
           br          
           a(href='/account', class='btn btn-primary profile-button') edit profile            
 
