--- a/views/partials/_footer.jade
+++ b/views/partials/_footer.jade
@@ -6,11 +6,9 @@
               li
                 a(href='/about') about us                
               li
-                a(href='/contact') contact us!                 
+                a(href='/contact') contact                 
               li
                 a(href='/faqs') FAQs
-              li
-                a(href='/authors') author index
       .row
         .col-lg-12
           ul.nav.nav-pills.nav-justified
