--- a/views/edit-profile.jade
+++ b/views/edit-profile.jade
@@ -75,6 +75,7 @@ block content
               input(type='file', name='userPhoto')
               br
               input#submit(type='submit', value='Upload Image', name='submit')
+          .form-area.text-center
             form#aboutMeForm(class='form-aboutMe', action='/account', method='POST')
               br(style='clear:both')
               h3(style='margin-bottom: 25px; text-align: center;') 
