--- a/views/user.jade
+++ b/views/user.jade
@@ -24,7 +24,7 @@ block content
                   p to add some info about yourself here #[strong OR] to add a profile picture.
                 .social
                   if user.facebook.token
-                    a.social-icon.facebook.animate(href='#{user.facebook.url})
+                    a.social-icon.facebook.animate(href='#{user.facebook.url}')
                       span.fa.fa-facebook
                   if user.twitter.token
                     a.social-icon.twitter.animate(href='#{user.twitter.url}')
