--- a/views/profile.jade
+++ b/views/profile.jade
@@ -56,6 +56,14 @@ block content
           a(href='/account', class='btn btn-primary profile-button') edit profile            
 
       div.col-xs-6.col-sm-4
+        .well
+          h3.text-warning
+            span.fa.fa-cogs
+            |  API Token
+          p
+            strong Token
+            | : #{user._id}
+
 
       div.col-xs-6.col-sm-4
         .container-fluid
